--- a/css/style.css
+++ b/css/style.css
@@ -685,10 +685,10 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .positions.on .mobis-slider {opacity: 1; transform: translateY(0px);}
     .positions.on .mobis-slider .swiper-slide {opacity: 1; transform: translateY(0px) scale(0.8);}
     .positions.on .mobis-slider .swiper-slide.swiper-slide-active {transform: translateY(0) scale(1.2);}
-    .positions.on .mobis-slider .swiper-slide:nth-child(1) {transition-delay: .2s;}
+    /* .positions.on .mobis-slider .swiper-slide:nth-child(1) {transition-delay: .2s;}
     .positions.on .mobis-slider .swiper-slide:nth-child(2) {transition-delay: .3s;}
     .positions.on .mobis-slider .swiper-slide:nth-child(3) {transition-delay: .4s;}
-    .positions.on .mobis-slider .swiper-slide:nth-child(4) {transition-delay: .5s;}
+    .positions.on .mobis-slider .swiper-slide:nth-child(4) {transition-delay: .5s;} */
     .positions.on .mip-slider {opacity: 1;transform: translateY(0);}
 
     /*****OUR PRODUCTS*****/
