--- a/css/style.css
+++ b/css/style.css
@@ -626,7 +626,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
 
 @media screen and (max-width: 1600px) {
     /*****OUR PRODUCTS*****/
-    .products .products-cont ul li:nth-child(1) .products-bg, .products .products-cont ul li:nth-child(2) .products-bg {background-position: 0;}
+    .products .products-cont ul li:nth-child(1) .products-bg, .products .products-cont ul li:nth-child(2) .products-bg {background-position: 0; background-attachment: inherit;}
 }
 @media screen and (max-width: 1200px) {
     html, body {height: auto; overflow:visible;overscroll-behavior: contain;}
