--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,9 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 }
 
 /*****INTRO*****/
-.visual-slider {position: relative; height: 100vh; overflow: hidden; /*height:calc(var(--vh, 1vh) * 100);*/}
-.visual-slider .swiper {height: 100vh; /*height:calc(var(--vh, 1vh) * 100);*/}
-.visual-slider .swiper-slide .slider-bg {height: 100vh; /* height:calc(var(--vh, 1vh) * 100);*/ background-size: cover;background-position: center;}
+.visual-slider {position: relative; height: 100vh; overflow: hidden; height:calc(var(--vh, 1vh) * 100);}
+.visual-slider .swiper {height: 100vh; height:calc(var(--vh, 1vh) * 100);}
+.visual-slider .swiper-slide .slider-bg {height: 100vh; height:calc(var(--vh, 1vh) * 100); background-size: cover;background-position: center;}
 .visual-slider .swiper-slide-active .slider-bg {transform: scale(1.1);transition: 7s all ease-out;}
 .visual-slider .swiper-slide .bg1 {background: url('../images/visual_img1.jpg') no-repeat center/cover;}
 .visual-slider .swiper-slide .bg2 {background: url('../images/visual_img2.jpg') no-repeat center/cover;}
@@ -209,7 +209,6 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .about-slider .swiper-slide-active .sub-title {animation: fadeInRight 1.5s both;}
 .about-slider .swiper-slide-active .sp-title {animation: fadeInRight 1.5s .2s both;}
 .about-slider .swiper-slide-active .sp-text {animation: fadeInRight 1.5s .3s both;}
-/* .about-slider .count-slider {display: none;} */
 @keyframes fadeInRight {
     0% {
         opacity: 0;
@@ -402,8 +401,6 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .positions {height: 100vh;background: url('../images/positions_bg.jpg') no-repeat center; background-size: cover;background-attachment: fixed;}
 .positions-in {padding-top: 20vh;}
 .positions-in .panel-top {margin-bottom: 22px;}
-/* .positions .panel-top .panel-title {opacity: 0; transform: translateY(70px); transition: .3s all ease-in-out;} */
-/* .positions.on .panel-top .panel-title {opacity: 1; transform: translateY(0);} */
 .positions .panel-text {opacity: 0; transform: translateY(70px); transition: .3s .1s all ease-in-out;}
 .positions.on .panel-text {opacity: 1; transform: translateY(0);}
 .positions .positions-cont {position: relative;}
@@ -448,7 +445,6 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .mip-slider .swiper-button-prev:after {content: ''; width: 30px;height: 35px; background: url('../images/arrow_prev.svg') no-repeat center;}
 
 /*****OUR PRODUCTS*****/
-.products {}
 .products-in {height: 100vh;}
 .products .panel-top {position: absolute; top:20vh; left:50%; transform: translateX(-50%); z-index: 1;}
 .products .products-cont {height: 100%;}
@@ -587,7 +583,7 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .location .location-addr {display: flex; align-items: center;height: 50px; background-color: #EFF6FF;}
 .location .location-addr p {height: 50px;display: flex;align-items: center;justify-content: center;padding: 0 15px;font-size: 18px;word-break: keep-all; color: #fff; background-color: #334291;}
 .location .location-addr p img {margin-right: 8px;}
-.location .location-addr span {padding-left: 15px; font-size: 18px;}
+.location .location-addr span {padding: 0 15px; font-size: 18px;}
 .location .location-map iframe {width: 100%; height: 40vh;}
 .location .location-cont {margin-top:36px;}
 .location .location-cont ul {display: flex;}
@@ -662,7 +658,6 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .sp-img .imgbox img {transform: translate(-22%,-36%) scale(0.7);}
     .about-slider .slider-title .sub-title {opacity: 0; transform: translateY(50px);}
     .about-slider .slider-title .sp-title {opacity: 0; transform: translateY(50px);}
-    /* .about .about-slider .sp-img {opacity: 0; transform: translateY(50px);} */
     .about-slider .slider-text .sp-text {opacity: 0; transform: translateY(50px);}
     .about.on .about-slider .slider-title .sub-title {opacity: 1; transform: translateY(0px);}
     .about.on .about-slider .slider-title .sp-title {opacity: 1; transform: translateY(0px);}
@@ -679,16 +674,11 @@ footer .copyright span {margin:5px 10px 5px 0;}
 
     /*****OUR POSITIONS*****/
     .positions-in {padding: 15vh 0 10vh;}
-    /* .mobis-slider .swiper-slide {opacity: 1;transform: translateY(0);} */
     .mobis-slider.destroy .swiper-slide {margin-left: 16px;}
     .positions .mobis-slider .swiper-slide { transform: translateY(70px) scale(0.8);transition: .3s all ease-in-out;}
     .positions.on .mobis-slider {opacity: 1; transform: translateY(0px);}
     .positions.on .mobis-slider .swiper-slide {opacity: 1; transform: translateY(0px) scale(0.8);}
     .positions.on .mobis-slider .swiper-slide.swiper-slide-active {transform: translateY(0) scale(1.2);}
-    /* .positions.on .mobis-slider .swiper-slide:nth-child(1) {transition-delay: .2s;}
-    .positions.on .mobis-slider .swiper-slide:nth-child(2) {transition-delay: .3s;}
-    .positions.on .mobis-slider .swiper-slide:nth-child(3) {transition-delay: .4s;}
-    .positions.on .mobis-slider .swiper-slide:nth-child(4) {transition-delay: .5s;} */
     .positions.on .mip-slider {opacity: 1;transform: translateY(0);}
 
     /*****OUR PRODUCTS*****/
@@ -703,8 +693,6 @@ footer .copyright span {margin:5px 10px 5px 0;}
     
     /*****LOCATION*****/
     .location-in {padding: 15vh 10vh;}
-    /* .location .location-map {opacity: 1;transform: translateY(0);} */
-    /* .location .location-cont ul li {opacity: 1;transform: translateY(0);} */
     .location.on .location-map {opacity: 1; transform: translateY(0px);}
     .location.on .location-cont {opacity: 1; transform: translateY(0px);}
     .location.on .location-cont ul li {opacity: 1; transform: translateY(0px);}
@@ -715,14 +703,14 @@ footer .copyright span {margin:5px 10px 5px 0;}
 }
 
 @media screen and (max-width: 1024px) {
-    a[href^="tel"] {color: inherit; /* Inherit text color of parent element. */text-decoration: none;}
+    a[href^="tel"] {color: inherit; text-decoration: none;}
     .wrapper {height: auto;}
 
     /*****HEADER*****/
     header .gnb {justify-content: center;}
     header .gnb .logo {width: 120px; height: 30px;background-position-y: -32px;}
     header .gnb .pagination {flex-wrap: wrap;}
-    header nav {position: fixed;top: 60px;width: 300px; height: 100vh;left: -300px;background-color: #fff;z-index: 2; box-shadow: 2px 7px 8px 2px rgb(0 0 0 / 20%); transition: .3s left ease;}
+    header nav {position: fixed;top: 60px;width: 250px; height: 100vh;left: -300px;background-color: #fff;z-index: 2; box-shadow: 2px 7px 8px 2px rgb(0 0 0 / 20%); transition: .3s left ease;}
     header.open nav {left: 0;}
     header nav ul a, header.on nav a {color: #000;}
     header nav ul a {display: block; padding-left: 25px;}
@@ -754,16 +742,15 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .sp-img .imgbox img {position: relative; top:0; left:0; transform: translate(0px,0px); width: 100%;}
     .current .sp-img .imgbox, .current .swiper-slide-active .sp-img .imgbox, .out .sp-img .imgbox, .out .swiper-slide-active .sp-img .imgbox { animation:none;}
     .about-slider .swiper {height: auto;}
-    /* .about.on .about-slider .swiper {opacity: 1; transform: translateY(0px);} */
     .active .about-slider .swiper {overflow: hidden;}
     .about-slider .swiper-wrapper {overflow: hidden;}
-    .about-slider .slider-controls {display: flex;margin-top: 15px;/*opacity: 0; transform: translateY(70px); transition: .3s .6s all ease-in-out;*/}
+    .about-slider .slider-controls {display: flex;margin-top: 15px;}
     .about-slider .slider-controls .count-slider {display: flex;align-items: center;}
     .about-slider .swiper-button-next {top: auto;right: -7px;bottom: -12px; margin-top:0;}
     .about-slider .swiper-button-next:after {width: 12px; height: 20px;}
     .about-slider .swiper-button-prev {top: auto;left:auto; right:22px; bottom: -12px; margin-top:0;}
     .about-slider .swiper-button-prev:after {width: 12px; height: 20px;}
-    .about-slider .slider-text .sp-text {width: auto; min-height: auto; /*opacity: 0; transform: translateY(40px); transition: .4s .5s all ease-in-out;*/}
+    .about-slider .slider-text .sp-text {width: auto; min-height: auto;}
     .about-slider .swiper-pagination {display: flex; bottom: 6px; left: 50%; width: calc(100% - 100px); text-align: center; transform: translateX(-51%);}
     .about-slider .swiper-pagination-bullet {width: 100%; height: 3px;background-color: #E0E0E0;}
     .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {transform: rotate(0deg); background-color: transparent;}
@@ -784,15 +771,15 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .business .column-list .icon-item {padding: 0 2vw;}
     
     /*****OUR POSITIONS*****/
+    .positions {height: auto; overflow: hidden;background-attachment: inherit;}
     .positions-in {padding: 10vh 0;}
-    .positions {height: auto; overflow: hidden;}
     .positions .mobis-logo {top: auto; bottom: -10px; right:50px; width: 190px;}
 
     .mobis-slider {margin: 100px 0 75px 0;opacity: 0; transform: translateY(70px); transition: .5s all ease-in-out;}
     .mobis-slider .swiper-slide:before {font-size: 130px;}
     .mobis-slider .swiper-slide .positions-item {height: 165px;}
     .mobis-slider .swiper-slide.swiper-slide-active:before {transform: translate(-55px, -60px);opacity: 0.4;}
-    .mobis-slider .swiper-slide.swiper-slide-active .positions-item {/*width: 216px;height: 216px; margin-top:-25px;*/ background-color: #fff;box-shadow: 0px 7px 30px 3px rgb(0 0 0 / 47%);}
+    .mobis-slider .swiper-slide.swiper-slide-active .positions-item {background-color: #fff;box-shadow: 0px 7px 30px 3px rgb(0 0 0 / 47%);}
     .mobis-slider .swiper-slide:nth-child(1).swiper-slide-active .icon-box {background-position-x: 13px;}
     .mobis-slider .swiper-slide:nth-child(2).swiper-slide-active .icon-box {background-position-x: 0px;}
     .mobis-slider .swiper-slide:nth-child(3).swiper-slide-active .icon-box {background-position-x: 0px;}
@@ -876,7 +863,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
 @media screen and (max-width: 640px) {
     .panel-top.ac {align-items: flex-start;} 
     .panel-top h2 {margin:-5px 8px 0 0; font-size: 24px;letter-spacing: -2px;}
-    .panel-top span {font-size: 18px;}
+    .panel-top span {font-size: 18px;word-break: keep-all;}
     .panel-text {width: auto; font-size: 15px; line-height: 23px;}
 
     /*****INTRO*****/
@@ -941,7 +928,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .business .column-list li:nth-child(3) .box.box-left span {animation: iconColorOn 1.5s 3s ease-in-out;}
 
     /*****OUR POSITIONS*****/
-    .check-title {font-size: 18px; /*opacity: 1; transform: translateY(0px);*/}
+    .check-title {font-size: 18px; line-height: 1.3;}
     .mobis-slider .swiper-slide .icon-text span p {font-size: 15px; line-height: 20px;}
     .mip-slider .swiper-slide {padding: 33px 0; font-size: 15px;}
 
