--- a/css/style.css
+++ b/css/style.css
@@ -29,14 +29,10 @@ table {border-collapse: collapse;border-spacing: 0;}
 html,body {position: relative; height:100%; padding:0; margin:0;font-family: 'Noto Sans KR';background-color: #fff;letter-spacing: -0.6px;text-size-adjust: none;-webkit-text-size-adjust: none;-moz-text-size-adjust: none;-ms-text-size-adjust: none; -o-text-size-adjust: none;}
 .skip {width: 0; font-size: 0; text-indent: -9999px; overflow: hidden; height: 0;}
 .not_scroll{
-    position: fixed;
-    overflow: hidden;
-    width: 100%;
-    height: 100%
-}
-.not_scroll .cont {
-    position: relative;
-    top: 0;
+    /* position: fixed; */
+    overflow: hidden !important;
+    /* width: 100%; */
+    /* height: 100% */
 }
 /*****SCROLLBAR CUSTOM*****/
 ::-webkit-scrollbar {width: 7px; height: 7px;}
