--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html,body {position: relative; height:100%; padding:0; margin:0;font-family: 'No
 .skip {width: 0; font-size: 0; text-indent: -9999px; overflow: hidden; height: 0;}
 .not_scroll{
     position: fixed;
-    overflow: hidden;
+    overflow: hidden !important;
     width: 100%;
     height: 100%
 }
