--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,11 @@ q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 html,body {position: relative; height:100%; padding:0; margin:0;font-family: 'Noto Sans KR';background-color: #fff;letter-spacing: -0.6px;text-size-adjust: none;-webkit-text-size-adjust: none;-moz-text-size-adjust: none;-ms-text-size-adjust: none; -o-text-size-adjust: none;}
 .skip {width: 0; font-size: 0; text-indent: -9999px; overflow: hidden; height: 0;}
-.not_scroll{
-    position: fixed;
-    overflow: hidden !important;
-    width: 100%;
-    height: 100%
-}
-.not_scroll .cont {
-    position: relative;
-    top: 0;
-}
+.not_scroll{position: fixed;overflow: hidden !important;width: 100%;height: 100%}
 .not_scroll header {pointer-events: none;}
+.not_scroll .popup-bg {transform: scaleX(1);}
+.not_scroll .triggerBtn {opacity: 0.5;}
+
 /*****SCROLLBAR CUSTOM*****/
 ::-webkit-scrollbar {width: 7px; height: 7px;}
 ::-webkit-scrollbar-thumb{background-color: #c7c7c7; border-radius: 10px;}
@@ -50,7 +44,7 @@ header:before {content: ''; position: fixed; top:60px; left:0; display: block; w
 header.open:before {transform: scaleX(1);}
 header .header-wrap {background-color: #fff; transition: .3s all ease-in-out;}
 header.on .header-wrap, header.on1 .header-wrap {background: linear-gradient(to right, #000536, 95%, #A2031B); background-size: 200% 200%;animation: gradient 1.5s ease both;}
-header.on .gnb, header.on1 .gnb {height: 70px;}
+/* header.on .gnb, header.on1 .gnb {height: 70px;} */
 header .gnb {display: flex;max-width: 1300px;height: 80px;align-items: center;margin: 0 auto;justify-content: space-between;transition: .3s all ease-in-out;}
 header .gnb .logo {position: relative; width: 160px; height: 38px; overflow: hidden; background: url('../images/logo.svg') no-repeat center;background-size: cover;background-position-y: -43px;}
 header.on .gnb .logo, header.on1 .gnb .logo {background-position-y: 0px;}
@@ -498,14 +492,13 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .popup-head .popup-title h3 {margin-top: 10px;font-size: 32px;font-weight: 500;color: #06092B;}
 .popup-body {overflow: hidden;height: calc(100% - 94px); overflow-y: auto;}
 .popup-bg {content: ''; position: fixed; top:60px; left:0; display: block; width: 100vw; height: 100vh; background-color: rgba(0,0,0,0.3);transform: scaleX(0); transition: .2s all ease;transform-origin: top left;}
-.not_scroll .popup-bg {transform: scaleX(1);}
 
 /*TAB*/
 .tabs {position: sticky;top: 0;display: flex;justify-content: space-around;list-style-type: none;margin: 0;padding: 0;border-bottom: 1px solid #334291;background-color: #fff;z-index: 1;}
 .tabs > li {cursor: pointer;flex: 1 1 40%; padding: 16px 0;text-align: center;font-size: 20px; color: #334291;transition: .3s all ease;}
 .tabs > li.active {background-color: #334291; color: #fff;}
 .tab-content {display: none; margin: 16px;}
-.tab-content.active {display: block;}
+.tab-content.active {display: flex;}
 .tabcont-in {display: flex;}
 .car-imgbox {position: relative; width: 50%;}
 .car-imgbox img {width: 100%;}
@@ -549,8 +542,9 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .products .dot-bg {animation: dotScale3 0.5s infinite;animation-direction: alternate;position: absolute; top: -1px;left: -1px;width: 10px;height: 10px; display: inline-block;border-radius: 50%;background-color: #0076FF; opacity: 0.2;}
 
 /*TABLE*/
-.table-data {position: relative; width: 100%; min-width: 1000px; height:50px;border-collapse: collapse;text-align: center;line-height: 45px; background-color: rgba(221,235,252,0.3);border-radius: 3px 3px 0 0;border: 1px solid #CBCBCB;}
+.table-data {position: relative;flex: 1 1 30%; width: 100%; height:50px;border-collapse: collapse;text-align: center;line-height: 45px; background-color: rgba(221,235,252,0.3);border-radius: 3px 3px 0 0;border: 1px solid #CBCBCB;}
 .table-data.marB {margin-bottom: 10px;}
+.table-data:nth-child(2), .table-data:nth-child(3) {border-left: none;}
 .table-data:before {content: ''; position: absolute; top:0; left:0; width: 1px; height: 100%; border-left: 1px solid #CBCBCB;}
 .table-data:after {content: ''; position: absolute; top:0; right:-2px; width: 1px; height: 100%; border-left: 1px solid #CBCBCB;}
 .table-data > thead th {font-size: 16px; font-weight: 500;}
@@ -825,7 +819,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
     /*TAB*/
     .tab-contents {overflow: hidden;height: calc(100% - 33px); padding: 0 20px;}
     .tab-content {height: 100%;margin: 0;}
-    .tab-content.table-wrap {height: calc(100% - 20px);overflow: auto;}
+    .tab-content.table-wrap {height: calc(100% - 20px);overflow: hidden; overflow-y: auto;}
     .tabcont-in {flex-direction: column;height: 100%;}
     .tabs {margin: 0 20px; border-bottom: none;}
     .tabs > li {padding: 8px 0; font-size: 16px; color:#555;border-bottom: 2px solid #E8E8E8;}
@@ -870,6 +864,11 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .products .panel-top {left: 20px; transform: translateX(0%)}
     .img-list .list-items .list-item img {width: 65%;}
     .products .products-company p {font-size: 35px;}
+
+    .tab-content {flex-wrap: wrap;}
+    .table-data {flex: 1 1 60%;}
+    .table-data > tbody > tr > td:nth-child(1) {width: 30%;}
+    .table-data:nth-child(2) thead, .table-data:nth-child(3) thead {display: none;}
 
 }
 @media screen and (max-width: 640px) {
