--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,12 @@ table {border-collapse: collapse;border-spacing: 0;}
 html,body {position: relative; height:100%; padding:0; margin:0;font-family: 'Noto Sans KR';background-color: #fff;letter-spacing: -0.6px;text-size-adjust: none;-webkit-text-size-adjust: none;-moz-text-size-adjust: none;-ms-text-size-adjust: none; -o-text-size-adjust: none;}
 .skip {width: 0; font-size: 0; text-indent: -9999px; overflow: hidden; height: 0;}
 .pc-hide {display: none;}
-.not_scroll{position: fixed;overflow: hidden !important;width: 100%;height: 100%; touch-action:none;touch-action: none;-ms-touch-action: none;}
+/* .not_scroll{position: fixed;overflow: hidden !important;width: 100%;height: 100%; touch-action:none;touch-action: none;-ms-touch-action: none;} */
+.not_scroll{touch-action: none;
+    -webkit-overflow-scrolling: none;
+    overflow: hideen;
+    /* 이외의 브라우저 */
+    overscroll-behavior: none;}
 .not_scroll header {pointer-events: none;}
 .not_scroll .popup-bg {transform: scaleX(1);}
 .not_scroll .triggerBtn {opacity: 0.5;}
