--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,7 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .popup-head .popup-title span {font-size: 20px; color: #334291;opacity: 0.8;font-weight: 500;}
 .popup-head .popup-title h3 {margin-top: 10px;font-size: 32px;font-weight: 500;color: #06092B;}
 .popup-body {overflow: hidden;height: calc(100% - 94px); overflow-y: auto;}
-.popup-bg {content: ''; position: fixed; top:60px; left:0; display: block; width: 100vw; height: 100vh; background-color: rgba(0,0,0,0.3);transform: scaleX(0); transition: .2s all ease;transform-origin: top left;}
+.popup-bg {content: ''; position: fixed; top:60px; left:0; bottom: 0;; display: block; width: 100vw; height: 100%; background-color: rgba(0,0,0,0.3);transform: scaleX(0); transition: .2s all ease;transform-origin: top left;}
 
 /*TAB*/
 .tabs {position: sticky;top: 0;display: flex;justify-content: space-around;list-style-type: none;margin: 0;padding: 0;border-bottom: 1px solid #334291;background-color: #fff;z-index: 1;}
