--- a/css/style.css
+++ b/css/style.css
@@ -773,7 +773,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
     
     /*****OUR POSITIONS*****/
     .positions {height: auto; overflow: hidden;background-attachment: inherit;}
-    .positions-in {padding: 6vh 0;}
+    .positions-in {padding: 70px 0;}
     .check-title {line-height: 1.3;}
     .positions .mobis-logo {top: auto; bottom: -10px; right:50px; width: 190px;}
     .mobis-slider .swiper-slide {transition: .3s all ease;}
@@ -884,14 +884,14 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .visual-slider .text-cont .bullet {margin: 0 5px; font-size: 30px;}
 
     /*****ABOUT*****/
-    .about-in {padding: 5vh 0;}
+    .about-in {padding: 70px 0;}
     .about-in .panel-top {margin-bottom: 23px;}
     .about-slider .slider-title .sub-title {margin-bottom: 8px; font-size: 16px;}
     .about-slider .slider-title .sp-title {margin-bottom: 20px; font-size: 22px;}
     .about-slider .slider-text .sp-text {margin-top:16px; font-size: 15px; line-height: 25px;}
 
     /*****BUSINESS*****/
-    .business-in {padding: 5vh 0;}
+    .business-in {padding: 70px 0;}
     .business .column-list .icon-text p {font-size: 19px; font-weight: 500;}
     .business .column-list .icon-text span {line-height: 23px; font-size: 16px;}
     .business .column-list li .icon-item {height: 250px;}
@@ -940,7 +940,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
     /*****OUR PRODUCTS*****/
     .products .panel-top.color-white h2, .products .panel-top.color-white .panel-text {color: #334291;}
     .products .panel-top.color-white span {color: #000;}
-    .products-in {height: auto; padding: 5vh 20px 0;}
+    .products-in {height: auto; padding: 70px 20px 10px;}
     .products .panel-top {position: relative; top: 0;left: 0;transform: translateX(0px);}
     .products .products-cont {height: auto;}
     .products .products-cont ul {flex-wrap: wrap;}
@@ -961,7 +961,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .img-list .list-items .list-item .list-text {width: 120px; text-align: left;}
 
     /*****LOCATION*****/
-    .location-in {padding: 5vh 0;}
+    .location-in {padding: 70px 0;}
     .location .location-addr {position: relative; flex-direction: column;align-items: flex-start; height: auto; padding: 12px 0px 10px 0;}
     .location .location-addr:before {content: ''; position: absolute; top:0; left:0; width: 55px; height: 3px; background-color: #334291;}
     .location .location-addr p {height: auto; margin-bottom: 5px; font-weight: 500; color: #334291; background-color: #EFF6FF;}
