--- a/css/style.css
+++ b/css/style.css
@@ -635,6 +635,14 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .mobis-slider.swiper-slide:hover .icon-box {transform: scale(1.2);}
 }
 
+@supports (-webkit-text-size-adjust:none) and (not (-ms-accelerator:true))
+and (not (-moz-appearance:none)) {
+    
+}
+@media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0) 
+{ @media {
+    .triggerBtn a span {background-color: greenyellow;}
+}}
 @media screen and (max-width: 1600px) {
     /*****OUR PRODUCTS*****/
     .products .products-cont ul li:nth-child(1) .products-bg, .products .products-cont ul li:nth-child(2) .products-bg {background-position: 0; background-attachment: inherit;}
@@ -983,5 +991,5 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .popup.on {z-index: 3;}
 
     .car-imgbox .car-info {margin-top: 15px;}
-    .img-list {height: calc(100% - 230px);}
+    .img-list {height: calc(100% - 225px);}
 }
