인터랙션, 반응형 수정

--- a/css/style.css
+++ b/css/style.css
@@ -634,9 +634,11 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .mobis-slider .swiper-slide:hover .icon-text span {color: #1F2A65;}
     .mobis-slider.swiper-slide:hover .icon-box {transform: scale(1.2);}
 }
-@supports (overflow:-webkit-marquee) and (justify-content:inherit) {
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+	/* 이 안에 Safari(10.1 이상)에서만 적용할 스타일 작성 */
     .triggerBtn a span {background-color: greenyellow;}
-}
+}}
 
 @media screen and (max-width: 1600px) {
     /*****OUR PRODUCTS*****/
