--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,9 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 }
 
 /*****INTRO*****/
-.visual-slider {position: relative; min-height: 100vh; overflow: hidden; height: -webkit-fill-available; }
-.visual-slider .swiper {min-height: 100vh; height: -webkit-fill-available;}
-.visual-slider .swiper-slide .slider-bg {min-height: 100vh; height: -webkit-fill-available; background-size: cover;background-position: center;}
+.visual-slider {position: relative; height: 100vh; overflow: hidden; height:calc(var(--vh, 1vh) * 100); }
+.visual-slider .swiper {height: 100vh; height:calc(var(--vh, 1vh) * 100);}
+.visual-slider .swiper-slide .slider-bg {height: 100vh; height:calc(var(--vh, 1vh) * 100); background-size: cover;background-position: center;}
 .visual-slider .swiper-slide-active .slider-bg {transform: scale(1.1);transition: 7s all ease-out;}
 .visual-slider .swiper-slide .bg1 {background: url('../images/visual_img1.jpg') no-repeat center/cover;}
 .visual-slider .swiper-slide .bg2 {background: url('../images/visual_img2.jpg') no-repeat center/cover;}
