--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 
 /*SCROLL ARROW*/
 .scroll-arrow img {width: 20px;}
-.scroll-arrow {display: flex;flex-direction: column;justify-content: center;align-items: center;position: absolute; width: 80px;height: 80px;bottom: 32px;z-index: 1;border: 1px solid #fff;left: 50%;transform: translateX(-50%); color: #fff;border-radius: 50%;text-align: center;}
+.scroll-arrow {display: flex;flex-direction: column;justify-content: center;align-items: center;position: absolute; width: 80px;height: 80px;bottom: 10%;z-index: 1;border: 1px solid #fff;left: 50%;transform: translateX(-50%); color: #fff;border-radius: 50%;text-align: center;}
 .scroll-arrow p {margin-top:5px; font-size:14px;}
 .scroll-arrow .scroll-move {position: absolute; top: 24px;display: inline-block;width: 2px; height: 5px; border: 1px solid #fff; border-radius: 3px;animation: scrollMove 1.5s infinite;}
 
@@ -139,9 +139,9 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 }
 
 /*****INTRO*****/
-.visual-slider {position: relative; height: 100%; overflow: hidden; height:calc(var(--vh, 1vh) * 100); }
-.visual-slider .swiper {height: 100%; height:calc(var(--vh, 1vh) * 100);}
-.visual-slider .swiper-slide .slider-bg {height: 100%; height:calc(var(--vh, 1vh) * 100); background-size: cover;background-position: center;}
+.visual-slider {position: relative; height: 100vh; overflow: hidden; /*height:calc(var(--vh, 1vh) * 100);*/}
+.visual-slider .swiper {height: 100vh; /*height:calc(var(--vh, 1vh) * 100);*/}
+.visual-slider .swiper-slide .slider-bg {height: 100vh; /*height:calc(var(--vh, 1vh) * 100);*/ background-size: cover;background-position: center;}
 .visual-slider .swiper-slide-active .slider-bg {transform: scale(1.1);transition: 7s all ease-out;}
 .visual-slider .swiper-slide .bg1 {background: url('../images/visual_img1.jpg') no-repeat center/cover;}
 .visual-slider .swiper-slide .bg2 {background: url('../images/visual_img2.jpg') no-repeat center/cover;}
