--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 
 /*SCROLL ARROW*/
 .scroll-arrow img {width: 20px;}
-.scroll-arrow {display: flex;flex-direction: column;justify-content: center;align-items: center;position: absolute; width: 80px;height: 80px;bottom: 10%;z-index: 1;border: 1px solid #fff;left: 50%;transform: translateX(-50%); color: #fff;border-radius: 50%;text-align: center;}
+.scroll-arrow {display: flex;flex-direction: column;justify-content: center;align-items: center;position: absolute; width: 80px;height: 80px;bottom: 32px;z-index: 1;border: 1px solid #fff;left: 50%;transform: translateX(-50%); color: #fff;border-radius: 50%;text-align: center;}
 .scroll-arrow p {margin-top:5px; font-size:14px;}
 .scroll-arrow .scroll-move {position: absolute; top: 24px;display: inline-block;width: 2px; height: 5px; border: 1px solid #fff; border-radius: 3px;animation: scrollMove 1.5s infinite;}
 
@@ -710,6 +710,9 @@ footer .copyright span {margin:5px 10px 5px 0;}
 @media screen and (max-width: 1024px) {
     a[href^="tel"] {color: inherit; text-decoration: none;}
     .wrapper {height: auto;}
+
+    /*SCROLL ARROW*/
+    .scroll-arrow {bottom: 12%;}
 
     /*****HEADER*****/
     header .gnb {justify-content: center;}
